# Cobalt

./: .gitignore  README.md  interpreter.c  pyproject.toml
c/: interpreter.c
example_programs/: calculator.c  calculator.co  countdown.co  factorial.co  fibonacci.co  isprime.co  math.co  math_demo.co  parity.co  power.co  sine.c  sine.co  sumton.co  sumton2.co
legacy/: interpreter_v1.py
legacy/c/: interpreter.c
legacy/cobalt_v2/: __main__.py  interpreter.py
programs/: calculator.co  countdown.co  factorial.co  isprime.co  parity.co
python/cobalt/: __main__.py  c_templates.py  compiler.py  config.py  instructions.py  interpreter.py  interpreter_errors.py  ir.py  parser.py  preprocessor.py  runtime.py  stack.py  tokenizer.py
vscode/cobalt-language/: README.md  language-configuration.json  package.json
vscode/cobalt-language/syntaxes/: cobalt.tmLanguage.json
