[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cobalt-interpreter"
version = "0.1.0"
description = "Stack-based interpreter for the Cobalt language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
